--- a/www/templates/homeTemplate.html
+++ b/www/templates/homeTemplate.html
@@ -1,7 +1,9 @@
 <div data-role="footer" data-position="fixed">
     <div data-role="navbar">
         <ul>
-            <li><a href="templates/homeTemplate.html" class="ui-btn-active">Home</a></li>
+            <li><a href="index.html" data-icon="arrow-l"></a></li>
+            <li><a href="index.html" data-icon="home"></a></li>
+            <li><a href="index.html" data-icon="plus"></a></li>
         </ul>
     </div>
 </div>
