--- a/www/templates/homeTemplate.html
+++ b/www/templates/homeTemplate.html
@@ -1,7 +1,1 @@
-<div data-role="navbar">
-    <ul>
-        <li><a href="index.html" data-icon="arrow-l"></a></li>
-        <li><a href="index.html" data-icon="home"></a></li>
-        <li><a href="index.html" data-icon="plus"></a></li>
-    </ul>
-</div>
+This is the main content
