--- a/www/templates/navpanel.html
+++ b/www/templates/navpanel.html
@@ -1,8 +1,7 @@
 <div data-role="panel" id="navpanel" data-display="overlay" data-position="left" data-theme="b">
     <div data-role="controlgroup" data-corners="false">
-        <a href="templates/maps.html" class="ui-btn">My Zones</a>
-        <a href="templates/newzone.html" class="ui-btn">Add a Zone</a>
-        <a href="chadtimmins.com" class="ui-btn">My Account</a>
-        <a href="chadtimmins.com" class="ui-btn"></a>
+        <a href="templates/maps.html" class="ui-btn" data-transition="slide">My Zones</a>
+        <a href="templates/newzone.html" class="ui-btn" data-transition="slide">Add a Zone</a>
+        <a href="templates/account.html" class="ui-btn" data-transition="slide">My Account</a>
     </div>
 </div>
