Added User Account Details

--- a/platforms/ios/www/templates/navpanel.html
+++ b/platforms/ios/www/templates/navpanel.html
@@ -2,6 +2,6 @@
     <div data-role="controlgroup" data-corners="false">
         <a href="templates/maps.html" class="ui-btn" data-transition="slide">My Zones</a>
         <a href="templates/newzone.html" class="ui-btn" data-transition="slide">Add a Zone</a>
-        <a href="templates/account.html" class="ui-btn" data-transition="slide">My Account</a>
+        <a href="templates/account.html" class="ui-btn" id="account_button" data-transition="slide">My Account</a>
     </div>
 </div>
