--- a/platforms/ios/www/templates/newzone.html
+++ b/platforms/ios/www/templates/newzone.html
@@ -5,7 +5,7 @@
 		<a href="#navpanel" class="ui-btn ui-btn-custom-menu ui-icon-bars ui-btn-icon-left ui-nodisc-icon"></a>
 	</div>
 
-	<div data-role="content">
+	<div class="ui-content" role="main">
 		<div class="ui-field-contain">
 			<h2>Create A New Zone</h2>
 			<input type="text" name="zone_name" id="zone_name" value="" placeholder="Enter Zone Name" data-clear-btn="true">
