--- a/www/css/index.css
+++ b/www/css/index.css
@@ -44,6 +44,14 @@ h1 {
     -webkit-overflow-scrolling: touch;
 }
 
+.blur-filter {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
+}
+
 input#email,#pass {
     margin-bottom: 5px;
 }
