--- a/www/templates/maps.html
+++ b/www/templates/maps.html
@@ -9,7 +9,7 @@
 	<div data-role="footer" data-position="fixed">
 		<div data-role="navbar">
 			<ul>
-				<li><a href="dashboard.html">Home</a></li>
+				<li><a href="../index.html">Home</a></li>
 				<li><a href="maps.html" class="ui-btn-active">Map</a></li>
 			</ul>
 		</div>
