--- a/www/css/index.css
+++ b/www/css/index.css
@@ -16,17 +16,6 @@
     background: url('../img/root-background-6.jpg');
 }
 
-h1 {
-	color: #009933;
-	text-shadow: 2px 2px 5px white;
-}
-
-[data-role=header]{
-    overflow: visible;
-   background: -webkit-linear-gradient(top, rgba(0,0,0,0.45) 0%,rgba(0,0,0,0) 100%);
-    border: 0px;
-}
-
 #blur_top{
     background-color: rgba(0,0,0,.4) !important;
     -webkit-filter: blur(5px);
@@ -90,21 +79,35 @@ input#email,#pass {
 }
 
 #dash_content {
-    background-color: transparent;
+    background-color: rgba(255,255,255,.2);
     height: 500px;
     padding-left: 10px;
     padding-right: 10px;
     border: 0px;
+    -webkit-overflow-scrolling: touch;
 }
 .ui-custom-zone {
-    background-color: rgba(0, 0, 0, .3);
+    background-color: rgba(0, 0, 0, .4);
     margin-top: 16px; 
     height: 116px;
     margin-left: 0px;
     margin-right: 0px;
+    padding: 0px;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 75px 75px;
+    overflow: hidden;
+}
+.zone-heading {
+    padding-left: 5px;
+    padding-right: 5px;
+    z-index: 0;
+}
+.zone-body {
+    background-color: rgba(255,255,255, .4);
+    margin: 0px;
+    height: 116px;
+    z-index: -1;
 }
 
 
