--- a/www/templates/navpanel.html
+++ b/www/templates/navpanel.html
@@ -2,6 +2,99 @@
     <div data-role="controlgroup" data-corners="false">
         <a href="templates/map.html" class="ui-btn" data-transition="slide">My Zones</a>
         <a href="templates/newzone.html" class="ui-btn" data-transition="slide">Add a Zone</a>
-        <a href="templates/account.html" class="ui-btn" id="account_button" data-transition="slide">My Account</a>
+        <div class="ui-field-contain">
+        <button id="my_account_btn" class="ui-btn">My Account</button>
+        </div>
     </div>
+		<div role="main" class="ui-content" id="account_content">
+
+	        <div class="ui-field-contain">
+				<label for="accountsettings_name">Name</label>
+				<input type="text" id="accountsettings_name" name="accountsettings_name">
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="accountsettings_email">Email</label>
+				<input type="text" id="accountsettings_email" name="accountsettings_email">
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="accountsettings_phone">Phone Number</label>
+				<input type="text" id="accountsettings_phone" name="accountsettings_phone">
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="accountsettings_address">Address</label>
+				<input type="text" id="accountsettings_address" name="accountsettings_address">
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="accountsettings_city">City</label>
+				<input type="text" id="accountsettings_city" name="accountsettings_city">
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="accountsettings_state">State</label>
+				<input type="text" id="accountsettings_state" name="accountsettings_state">
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="accountsettings_zip">Postal/Zip Code</label>
+				<input type="text" id="accountsettings_zip" name="accountsettings_zip">
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="accountsettings_country">Country</label>
+				<input type="text" id="accountsettings_country" name="accountsettings_country">
+			</div>
+
+			<h3>Tell Us About Your Farm</h3>
+
+			<div class="ui-field-contain">
+				<label for="accountsettings_acreage">Total Acreage</label>
+				<input type="text" id="accountsettings_acreage" name="accountsettings_acreage">
+			</div>	
+
+			<div class="ui-field-contain">
+				<label for="water_source">Water Source</label>
+				<select name="water_source" id="water_source">
+					<option value="0">Well</option>
+					<option value="1">Reservoir/Lake/Pond</option>
+					<option value="2">River/Stream</option>
+					<option value="3">City/County Water></option>
+					<option value="4">Rainfall</option>
+					<option value="5">None</option>
+				</select>
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="irrigation_method">Primary Irrigation Method</label>
+				<select name="irrigation_method" id="irrigation_method">
+					<option value="0">Drip</option>
+					<option value="1">Micro Sprinkler</option>
+					<option value="2">Pivot</option>
+					<option value="3">Lateral Move</option>
+					<option value="4">Other</option>
+					<option value="5">None</option>
+				</select>
+			</div>
+
+			<div class="ui-field-contain">
+				<label for="soil_type">Primary Soil Type</label>
+				<select name="soil_type" id="soil_type">
+					<option value="0">Unknown</option>
+					<option value="1">Clay</option>
+					<option value="2">Silt</option>
+					<option value="3">Loam</option>
+					<option value="4">Sand</option>
+				</select>
+			</div>		
+			
+			<div id="account_buttons">
+			<input type="submit" id="saveAccountDetails" value="Save">
+			<a href="#login" id="logout_button" class="ui-btn ui-corner-all">Logout</a>
+			</div>
+
+		</div>
+    
 </div>
