Major Change: Stopped use of templates, all scaffolding is in index.html (aside from login). Changed menu to right side, added dashboard link, cleaned up code, added back buttons, added refresh, etc... lots of changes

--- a/platforms/android/assets/www/templates/navpanel.html
+++ b/platforms/android/assets/www/templates/navpanel.html
@@ -1,7 +1,7 @@
-<div data-role="panel" id="navpanel" data-display="overlay" data-position="left" data-theme="b">
+<div data-role="panel" id="navpanel" data-display="overlay" data-position="right" data-theme="b">
     <div data-role="controlgroup" data-corners="false">
-        <a href="templates/map.html" class="ui-btn" data-transition="slide">My Zones</a>
-        <a href="templates/newzone.html" class="ui-btn" data-transition="slide">Add a Zone</a>
+        <button id="dashboard_btn" class="ui-btn">Dashboard</button>
+        <button id="new_zone_btn" class="ui-btn">Add a Zone</button>
         <button id="my_account_btn" class="ui-btn">My Account</button>
     </div>
     
