--- a/www/templates/navpanel.html
+++ b/www/templates/navpanel.html
@@ -1,7 +1,7 @@
-<div data-role="panel" id="navpanel" data-display="overlay" data-position="left" data-theme="b">
+<div data-role="panel" id="navpanel" data-display="overlay" data-position="right" data-theme="b">
     <div data-role="controlgroup" data-corners="false">
-        <a href="templates/map.html" class="ui-btn" data-transition="slide">My Zones</a>
-        <a href="templates/newzone.html" class="ui-btn" data-transition="slide">Add a Zone</a>
+        <button id="dashboard_btn" class="ui-btn">Dashboard</button>
+        <button id="new_zone_btn" class="ui-btn">Add a Zone</button>
         <button id="my_account_btn" class="ui-btn">My Account</button>
     </div>
     
