Added transitions, fixed some CSS, added Font Awesome

--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -41,6 +41,10 @@
     border-width: 0px;
 }
 
+..ui-btn-custom-menu:hover {
+    color: #223F52 !important;
+}
+
 .ui-panel-inner{
     padding: 0px;
 }
