--- a/www/css/index.css
+++ b/www/css/index.css
@@ -141,3 +141,8 @@ input#email,#pass {
     display: none;
 }
 
+.root-btn {
+    color: #F4F4F4 !important;
+    background:rgba(0,164,128,1) !important;
+    border: 0px;
+}
