--- a/www/css/index.css
+++ b/www/css/index.css
@@ -147,6 +147,8 @@ input#email,#pass {
 
 .root-btn {
     color: #F4F4F4 !important;
-    background:rgba(0,164,128,1) !important;
+    background:#00A480 !important;
+    opacity: 1 !important;
+    text-indent: 0px !important;
     border: 0px;
 }
