--- a/www/css/index.css
+++ b/www/css/index.css
@@ -152,3 +152,12 @@ input#email,#pass {
     text-indent: 0px !important;
     border: 0px;
 }
+
+div#new_zone_content2 {
+    padding: 0px;
+}
+
+div#map_canvas {
+    width: 100%;
+    padding: 0px;
+}
