Added offline/online handlers and failed ajax request handler for login page

--- a/platforms/ios/www/templates/account.html
+++ b/platforms/ios/www/templates/account.html
@@ -91,7 +91,7 @@
 		</div>		
 
 		<input type="submit" id="saveAccountDetails" value="Save">
-		<button href="#login" id="logout_button">Logout</button>
+		<input type="submit" id="logout_button" value="Logout">
 
 		  
     </div>
