--- a/www/templates/navpanel.html
+++ b/www/templates/navpanel.html
@@ -91,7 +91,7 @@
 		
 		<div id="account_buttons">
 		<input type="submit" id="saveAccountDetails" value="Save">
-		<a href="#login" id="logout_button" class="ui-btn ui-corner-all">Logout</a>
+		<input type="submit" id="logout_button" value="Logout">
 		</div>
 
 	</div>
