Fixed account logout button

--- a/platforms/ios/www/templates/navpanel.html
+++ b/platforms/ios/www/templates/navpanel.html
@@ -60,7 +60,7 @@
 				<option value="0">Well</option>
 				<option value="1">Reservoir/Lake/Pond</option>
 				<option value="2">River/Stream</option>
-				<option value="3">City/County Water></option>
+				<option value="3">City/County Water</option>
 				<option value="4">Rainfall</option>
 				<option value="5">None</option>
 			</select>
